docs/2.14/updating-migrating/general-recommendations.md
[link-grpc-docs]:       https://grpc.io/
[link-http2-docs]:      https://developers.google.com/web/fundamentals/performance/http2
[link-protobuf-docs]:   https://developers.google.com/protocol-buffers/

# Рекомендации по обновлению WAF‑ноды

Этот документ содержит общие рекомендации к процессу обновления WAF‑ноды до версии 2.14, а также описание возможных рисков и способов их минимизации.

## Общие рекомендации

* Планируйте обновление WAF‑ноды и контролируйте процесс обновления. Ориентировочные даты выхода новых версий WAF‑ноды публикуются в [Политике версионирования WAF‑ноды](versioning-policy.md).
* Если в вашей инфраструктуре установлено несколько WAF‑нод, обновляйте их поочередно. Если в течение суток после обновления первой WAF‑ноды все модули работают корректно, выполните поочередное обновление других WAF‑нод с интервалом в сутки.
* Если вы используете разные среды для разработки и для боевого трафика, сначала примените и проверьте новую версию в среде разработки или тестирования, затем в боевой среде. Подробные рекомендации описаны в [инструкции по настройке WAF‑ноды для изолированных сред](../admin-ru/configuration-guides/waf-in-separated-environments/configure-waf-in-separated-environments.md#обновление-настроенной-wafноды).
* Перед обновлением WAF‑ноды, переключите [режим работы WAF‑ноды](../admin-ru/configure-wallarm-mode.md) в `monitoring`. Если в режиме `monitoring` в течение суток все модули работают корректно и нет аномального роста в количестве ложных атак, переведите WAF‑ноду в режим `block`.
* Обновляйте NGINX до последней доступной версии перед применением обновлений WAF‑ноды. Если в вашей инфраструктуре необходимо использовать другую версию NGINX, пожалуйста, напишите в [техническую поддержку Валарм](mailto:support@wallarm.ru) для сборки модуля WAF для кастомной версии NGINX.

## Риски при обновлении

Ниже приведены риски, возможные при обновлении WAF‑ноды. Чтобы снизить влияние риска на систему, следуйте соответствующим рекомендациям.

### Изменения в функциях WAF‑ноды

Новая минорная версия WAF‑ноды может содержать следующий набор изменений:

* Поддержка новых способов установки
* Прекращение поддержки невостребованных способов установки
* Новые возможности продукта
* Оптимизация работы продукта

Конфигурация предыдущей версии применяется к новой версии автоматически и не требует изменений в формате конфигурации. Исключение — при обновлении облачного образа необходимо перенести файлы с конфигурацией на новую версию вручную. Большинство новых возможностей настраиваются с помощью директив в файлах конфигурации.

Перед обновлением мы рекомендуем ознакомиться с [набором изменений](what-is-new.md) и учесть возможное изменение конфигурации при планировании обновления.

??? "Набор изменений в WAF‑ноде 2.14"
    **Поддерживаемые платформы**

    * Добавлена поддержка следующих операционных систем:
      * Debian 10
      * Amazon Linux 2
    * Прекращена поддержка операционных систем Debian 8.x (jessie) и Ubuntu 14.04 LTS (trusty). Поддержка Debian 8.x (jessie-backports) доступна.
    
    **Новые возможности продукта**

    * Добавлена поддержка gRPC: теперь Валарм может защищать API и веб‑приложения, работающие по протоколу gRPC.
  
        !!! info "О протоколе gRPC"
            Это современный, открытый и высокопроизводительный [фреймворк][link-grpc-docs] для удаленного вызова процедур (Remote Procedure Call, RPC), созданный компанией Google.
            
            Высокая производительность достигается за счет использования [HTTP/2][link-http2-docs] в качестве транспорта и [protobuf][link-protobuf-docs] для описания типов данных.
            
            Протокол gRPC может использоваться при построении сервисов и API в качестве альтернативы REST.

    * Добавлена поддержка настраиваемых страниц блокировки и кодов ответа сервера при блокировке по IP‑адресу. Настройка выполняется через директиву [`wallarm_acl_block_page`](../admin-ru/configure-parameters-ru.md#wallarm_acl_block_page).
    * Добавлена поддержка кастомного кода ответа сервера при блокировке вредоносного запроса. Настройка выполняется через параметр `response_code` в директиве [`wallarm_block_page`](../admin-ru/configure-parameters-ru.md#wallarm_block_page).
    * Добавлена поддержка [блокировки запросов по IP‑адресам](../admin-ru/configure-ip-blocking-ru.md) для Ingress‑контроллера Валарм WAF и для WAF‑ноды, развернутой в Docker‑контейнере.

    **Оптимизация работы продукта**

    * Улучшена работа мониторинга и других компонентов системы.

### Новые ложные срабатывания

Качество анализа трафика повышается с каждой новой версией WAF‑ноды, соответственно снижается количество ложных срабатываний. Но каждое защищаемое приложение имеет особенности, поэтому мы рекомендуем проанализировать работу новой версии WAF‑ноды в режиме `monitoring` перед включением режима блокировки (`block`).

Чтобы проанализировать количество новых ложных срабатываний после обновления:

1. Разверните новую версию WAF‑ноды в [режиме](../admin-ru/configure-wallarm-mode.md) `monitoring` и направьте на нее трафик.
2. Через некоторое время перейдите в Консоль управления Валарм → секция **События** и проанализируйте количество запросов, которые ошибочно распознаны как атаки.
3. При обнаружении аномального роста в количестве ложных срабатываний, пожалуйста, напишите в [техническую поддержку Валарм](mailto:support@wallarm.ru).

### Увеличение количества потребляемых ресурсов

Настройка новых возможностей продукта может вызвать изменение в количестве потребляемых ресурсов. Информация о возможных изменениях указывается в разделе [Что нового](what-is-new.md).

Также, рекомендуется проводить мониторинг работы WAF‑ноды: при обнаружении значительных отличий в фактическом количестве потребляемых ресурсов и в количестве, описанном в документации, пожалуйста, свяжитесь с [технической поддержкой Валарм](mailto:support@wallarm.ru).

## Процедура обновления

Процедура обновления WAF‑ноды зависит от платформы и формы установки. Выберите форму установки и следуйте инструкциям по обновлению:

* [Обновление модулей NGINX, NGINX Plus, Kong](nginx-modules.md)
* [Обновление Docker‑контейнера с модулями для NGINX](docker-container.md)
* [Обновление Ingress‑контроллера NGINX с сервисами Валарм WAF](ingress-controller.md)
* [Обновление облачного образа WAF‑ноды](cloud-image.md)
