docs/2.16/updating-migrating/general-recommendations.md
# Рекомендации по обновлению WAF‑ноды

Этот документ содержит общие рекомендации к процессу обновления WAF‑ноды до версии 2.16, а также описание возможных рисков и способов их минимизации.

## Общие рекомендации

* Планируйте обновление WAF‑ноды и контролируйте процесс обновления. Ориентировочные даты выхода новых версий WAF‑ноды публикуются в [Политике версионирования WAF‑ноды](versioning-policy.md).
* Если в вашей инфраструктуре установлено несколько WAF‑нод, обновляйте их поочередно. Если в течение суток после обновления первой WAF‑ноды все модули работают корректно, выполните поочередное обновление других WAF‑нод с интервалом в сутки.
* Если вы используете разные среды для разработки и для боевого трафика, сначала примените и проверьте новую версию в среде разработки или тестирования, затем в боевой среде. Подробные рекомендации описаны в [инструкции по настройке WAF‑ноды для изолированных сред](../admin-ru/configuration-guides/waf-in-separated-environments/configure-waf-in-separated-environments.md#обновление-настроенной-wafноды).
* Перед обновлением WAF‑ноды, переключите [режим работы WAF‑ноды](../admin-ru/configure-wallarm-mode.md) в `monitoring`. Если в режиме `monitoring` в течение суток все модули работают корректно и нет аномального роста в количестве ложных атак, переведите WAF‑ноду в режим `block`.
* Обновляйте NGINX до последней доступной версии перед применением обновлений WAF‑ноды. Если в вашей инфраструктуре необходимо использовать другую версию NGINX, пожалуйста, напишите в [техническую поддержку Валарм](mailto:support@wallarm.ru) для сборки модуля WAF для кастомной версии NGINX.

## Риски при обновлении

Ниже приведены риски, возможные при обновлении WAF‑ноды. Чтобы снизить влияние риска на систему, следуйте соответствующим рекомендациям.

### Изменения в функциях WAF‑ноды

Новая минорная версия WAF‑ноды может содержать следующий набор изменений:

* Поддержка новых способов установки
* Прекращение поддержки невостребованных способов установки
* Новые возможности продукта
* Оптимизация работы продукта

Конфигурация предыдущей версии применяется к новой версии автоматически и не требует изменений в формате конфигурации. Исключение — при обновлении облачного образа необходимо перенести файлы с конфигурацией на новую версию вручную. Большинство новых возможностей настраиваются с помощью директив в файлах конфигурации.

Перед обновлением мы рекомендуем ознакомиться с [набором изменений](what-is-new.md) и учесть возможное изменение конфигурации при планировании обновления.

??? "Набор изменений в WAF‑ноде 2.16"
    **Поддерживаемые платформы**

    * Прекращена поддержка операционной системы CentOS 6.x
    * Прекращена поддержка облачной платформы Heroku
    * Прекращена поддержка операционной системы Debian 8.x (jessie-backports)
    * Добавлена поддержка CentOS 8.x
    * Добавлена поддержка Envoy
    * Добавлена поддержка Яндекс.Облака

    Список всех платформ, доступных для установки WAF‑ноды версии 2.16, доступен по [ссылке](../admin-ru/supported-platforms.md).

    **Новые возможности продукта**

    * [Отображение версий](../user-guides/nodes/regular-node.md#просмотр-информации-о-wafноде) установленных компонентов WAF‑ноды, модулей NGINX-WAF и Envoy-WAF в Консоли управления
    * Новая директива [`wallarm_enable_libdtection`](../admin-ru/configure-parameters-ru.md#wallarm_enable_libdetection) для снижения количества ложных срабатываний за счет дополнительной валидации атак по улучшенным алгоритмам

        !!! warning "Увеличение в количестве потребляемой памяти"
            При анализе атак с помощью библиотеки libdetection возможно увеличение в количестве памяти, потребляемой процессами NGINX и Валарм, примерно на 10%.
            
    * Возможность добавить или изменить заголовок NGINX `Server`. Для настройки необходимо добавить соответствующее правило в профиль приложения. Чтобы добавить правило, пожалуйста, свяжитесь с нашей [технической поддержкой](mailto:support@wallarm.ru)
    * Новые параметры статистики WAF‑ноды:
        * `db_apply_time`: Unix‑время последнего обновления файла proton.db
        * `lom_apply_time`: Unix‑время последнего обновления файла [ЛОМ](../glossary-ru.md#лом)
        * `ts_files`: объект с информацией о файле [ЛОМ](../glossary-ru.md#лом)
        * `db_files`: объект с информацией о файле proton.db
        * `overlimits_time`: количество атак типа [Превышение лимита вычислительных ресурсов](../attacks-vulns-list.md#превышение-лимита-вычислительных-ресурсов), обнаруженных WAF‑нодой

        Список всех параметров сервиса статистики доступен по [ссылке](../admin-ru/configure-statistics-service.md#работа-с-сервисом-статистики).
    <!-- * [Пример кода Terraform](../admin-ru/installation-guides/amazon-cloud/deploy-waf-via-terraform/deploy-waf-via-terraform-intro.md) для установки WAF‑ноды в публичное облако AWS -->

    * Установка WAF‑ноды в форме [sidecar‑контейнера Kubernetes](../admin-ru/installation-guides/kubernetes/wallarm-sidecar-container.md)

    **Оптимизация работы продукта**

    * Ускорение сборки ЛОМа в 5‑10 раз. Теперь для генерации правил безопасности используется более оптимизированный процесс. Вы можете ознакомиться с деталями оптимизации в [отдельном посте на нашем новостном портале](https://changelog.wallarm.ru/генерация-правил-безопасности-5x-быстрее-152573)

### Новые ложные срабатывания

Качество анализа трафика повышается с каждой новой версией WAF‑ноды, соответственно снижается количество ложных срабатываний. Но каждое защищаемое приложение имеет особенности, поэтому мы рекомендуем проанализировать работу новой версии WAF‑ноды в режиме `monitoring` перед включением режима блокировки (`block`).

Чтобы проанализировать количество новых ложных срабатываний после обновления:

1. Разверните новую версию WAF‑ноды в [режиме](../admin-ru/configure-wallarm-mode.md) `monitoring` и направьте на нее трафик.
2. Через некоторое время перейдите в Консоль управления Валарм → секция **События** и проанализируйте количество запросов, которые ошибочно распознаны как атаки.
3. При обнаружении аномального роста в количестве ложных срабатываний, пожалуйста, напишите в [техническую поддержку Валарм](mailto:support@wallarm.ru).

### Увеличение количества потребляемых ресурсов

Настройка новых возможностей продукта может вызвать изменение в количестве потребляемых ресурсов. Информация о возможных изменениях указывается в разделе [Что нового](what-is-new.md).

Также, рекомендуется проводить мониторинг работы WAF‑ноды: при обнаружении значительных отличий в фактическом количестве потребляемых ресурсов и в количестве, описанном в документации, пожалуйста, свяжитесь с [технической поддержкой Валарм](mailto:support@wallarm.ru).

## Процедура обновления

Процедура обновления WAF‑ноды зависит от платформы и формы установки. Выберите форму установки и следуйте инструкциям по обновлению:

* [Обновление модулей NGINX, NGINX Plus, Kong](nginx-modules.md)
* [Обновление Docker‑контейнера с модулями для NGINX](docker-container.md)
* [Обновление Ingress‑контроллера NGINX с сервисами Валарм WAF](ingress-controller.md)
* [Обновление облачного образа WAF‑ноды](cloud-image.md)